# zkTripster

./: .gitmodules  README.md
.github/workflows/: deploy.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/contracts/: .env.example  foundry.toml
frontend/contracts/script/: DeployLocal.s.sol
frontend/contracts/scripts/: DeployLocal.s.sol
frontend/contracts/src/: PoE.sol
frontend/contracts/src/scripts/: api.ts
frontend/src/: App.tsx
frontend/src/components/: CircleAnimationSmall.tsx  Footer.tsx  Header.tsx
frontend/src/hooks/: useMetamask.ts
frontend/src/pages/: Home.tsx  IssueForm.tsx
frontend/src/utils/: api.ts  decrypt.ts
sp1_prover/: Cargo.toml  zkpoex.bincode
sp1_prover/bid-server/: Cargo.toml
sp1_prover/bid-server/src/: args.rs  cli.rs  main.rs  server.rs  utils.rs
sp1_prover/contracts/src/fixtures/: zkpoex_fixture.json
sp1_prover/ecdh-script/: Cargo.toml
sp1_prover/ecdh-script/src/: prove.rs
sp1_prover/ecdh/elf/: riscv32im-succinct-zkvm-elf
sp1_prover/keys/: default  foo  test
sp1_prover/zk-poex/: Cargo.toml
sp1_prover/zkpoex-script/: Cargo.toml
sp1_prover/zkpoex-script/src/: prove.rs  verify.rs
