[package]
version = "0.1.0"
name = "server"
edition = "2021"

[[bin]]
name = "cli"
path = "src/cli.rs"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
anyhow = "1.0.57"
async-std = { version = "1.10.0", features = ["attributes"] }
async-trait = "0.1.56"
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.19"
clap = { version = "4.0.18", features = ["derive"] }
k256 = { version = "0.7" }
ethers = { version = "2" }
eyre = "0.6.8"
futures = "0.3.21"
futures-util = "0.3"
hex = "0.4"
humantime = "2.1.0"
inquire = { version = "0.2.1" }
itertools = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
surf = "2.3.2"
url = "2"
rocket_cors = "0.6.0"
tokio = { version = "1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
tracing-subscriber = "0.3"
eth-keystore = "0.5.0"


zkpoex = { path = "../zkpoex-script", package = "zkpoex-script" }


[build-dependencies]
